rustcc/tests/input/parser/invalid/keyword_wrong_case.c
// RUN: ${{rustcc}}
// EXPECT-FAILURE

int main(void) {
    RETURN 0;
}